Initial RL server for private use

--- a/custom_components/riverlink/manifest.json
+++ b/custom_components/riverlink/manifest.json
@@ -6,7 +6,7 @@
   ],
   "config_flow": true,
   "documentation": "https://github.com/switch180/RiverLink-SDVoE",
-  "iot_class": "cloud_polling",
+  "iot_class": "local_polling",
   "issue_tracker": "https://github.com/switch180/RiverLink-SDVoE/issues",
-  "version": "0.1.0"
+  "version": "0.2.0"
 }
