--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,54 +1,113 @@
 ---
-name: "Bug report"
-description: "Report a bug with the integration"
+name: "🐛 Bug report"
+description: "Report a bug with the RiverLink SDVoE Matrix integration"
+labels: ["Bug"]
 body:
 - type: markdown
   attributes:
-    value: Before you open a new issue, search through the existing issues to see if others have had the same problem.
-- type: textarea
+    value: |
+      **Thanks for reporting a bug for RiverLink SDVoE Matrix!**
+      Before you open a new issue, search through [existing issues](https://github.com/switch180/RiverLink-SDVoE/issues?q=is%3Aissue+label%3A%22Bug%22+) to see if others have had the same problem.
+
+- type: input
   attributes:
-    label: "System Health details"
-    description: "Paste the data from the System Health card in Home Assistant (https://www.home-assistant.io/more-info/system-health#github-issues)"
+    label: "Home Assistant Version"
+    description: "Find in: Settings → System → About (at the bottom) → Core version"
+    placeholder: "2025.2.4"
   validations:
     required: true
+
+- type: input
+  attributes:
+    label: "RiverLink SDVoE Matrix Version"
+    description: "Find in: HACS → Integrations → RiverLink SDVoE Matrix → Version number shown below the title as 'Version Downloaded'"
+    placeholder: "0.3.0"
+  validations:
+    required: true
+
+- type: textarea
+  attributes:
+    label: "SDVoE System Information"
+    description: "Provide details about your SDVoE hardware and network"
+    placeholder: |
+      - SDVoE Hardware: (e.g., Semtech BlueRiver chipset, specific transmitter/receiver models)
+      - SDVoE API version:
+      - Network configuration:
+  validations:
+    required: true
+
 - type: checkboxes
   attributes:
     label: Checklist
     options:
-      - label: I have enabled debug logging for my installation.
+      - label: I have filled out the issue template completely
         required: true
-      - label: I have filled out the issue template to the best of my ability.
+      - label: This issue contains only ONE bug (open separate issues for multiple bugs)
         required: true
-      - label: This issue only contains 1 issue (if you have multiple issues, open one issue for each issue).
+      - label: This is not a duplicate of [existing issues](https://github.com/switch180/RiverLink-SDVoE/issues?q=is%3Aissue+label%3A%22Bug%22+)
         required: true
-      - label: This issue is not a duplicate issue of any [previous issues](https://github.com/ludeeus/integration_blueprint/issues?q=is%3Aissue+label%3A%22Bug%22+)..
-        required: true
+
 - type: textarea
   attributes:
-    label: "Describe the issue"
-    description: "A clear and concise description of what the issue is."
+    label: "Bug Description"
+    description: "A clear description of what the bug is"
+    placeholder: "When I try to route Video Source A to Display B, the integration..."
   validations:
     required: true
+
 - type: textarea
   attributes:
-    label: Reproduction steps
-    description: "Without steps to reproduce, it will be hard to fix. It is very important that you fill out this part. Issues without it will be closed."
+    label: "Steps to Reproduce"
+    description: "Detailed steps to reproduce the bug"
     value: |
-      1.
-      2.
-      3.
-      ...
+      1. Go to Settings → Devices & Services → RiverLink SDVoE Matrix
+      2. Select receiver device '...'
+      3. Change video source to '...'
+      4. Observe error: '...'
   validations:
     required: true
+
 - type: textarea
   attributes:
-    label: "Debug logs"
-    description: "To enable debug logs check this https://www.home-assistant.io/integrations/logger/, this **needs** to include _everything_ from startup of Home Assistant to the point where you encounter the issue."
+    label: "Expected Behavior"
+    description: "What should happen"
+    placeholder: "The video source should route successfully and the display should show the new content"
+  validations:
+    required: true
+
+- type: textarea
+  attributes:
+    label: "Actual Behavior"
+    description: "What actually happens"
+    placeholder: "The integration throws an error and the routing fails"
+  validations:
+    required: true
+
+- type: textarea
+  attributes:
+    label: "Debug Logs"
+    description: |
+      Enable debug logging by adding to configuration.yaml:
+      ```yaml
+      logger:
+        logs:
+          custom_components.riverlink: debug
+      ```
+      Then restart HA and reproduce the issue. Paste ALL logs from startup to error.
     render: text
   validations:
     required: true
 
 - type: textarea
   attributes:
-    label: "Diagnostics dump"
-    description: "Drag the diagnostics dump file here. (see https://www.home-assistant.io/integrations/diagnostics/ for info)"
+    label: "Diagnostics Dump"
+    description: "Drag the diagnostics file here (Settings → Devices & Services → RiverLink → 3 dots → Download Diagnostics)"
+  validations:
+    required: false
+
+- type: textarea
+  attributes:
+    label: "Additional Context"
+    description: "Screenshots, network topology diagrams, or anything else that helps"
+  validations:
+    required: false
