--- a/.ruff.toml
+++ b/.ruff.toml
@@ -1,6 +1,7 @@
 # The contents of this file is based on https://github.com/home-assistant/core/blob/dev/pyproject.toml
 
 target-version = "py313"
+line-length = 120
 
 [lint]
 select = [
@@ -13,6 +14,9 @@ ignore = [
     "D212", # multi-line-summary-first-line (incompatible with formatter)
     "COM812", # incompatible with formatter
     "ISC001", # incompatible with formatter
+    "RUF001", # Allow ambiguous unicode characters (e.g., × for resolution display)
+    "EXE002", # File is executable but no shebang present (not needed for library files)
+    "TRY300", # Consider moving statement to else block (conflicts with RET505/RET506)
 ]
 
 [lint.flake8-pytest-style]
